--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@
   transition: all 1.5s ease;
 }
 .for-rent.slide-up {
-  transform: translate(0, -40vh) rotate(-3deg) scale(0.7);
+  transform: translate(-44vw, -40vh) rotate(-3deg) scale(0.7);
 }
 
 .white-box {
