--- a/main.css
+++ b/main.css
@@ -4,9 +4,10 @@
   width: 100%;
   z-index: 0;
 }
-#features:target {
+#features:target,
+#agreement:target {
   z-index: 10;
-  background: green;
+  background: hsla(216, 3%, 99%, 1);
 }
 .landing {
   height: 100vh;
@@ -92,9 +93,29 @@
   color: hsl(211, 35%, 89%);
   background-image: linear-gradient(to right, #007bff, #2d84e0)
 }
-
+.footer-nav {
+  width: 100%;
+  background: #ffffff;
+  background: #2c2c2f;
+  min-height: 15px;
+  box-shadow: 0px 3px 10px 0 hsla(215, 24%, 36%, 0.3803921568627451);
+  padding: 12px;
+}
+.footer-title {
+  font-family: 'Work Sans', sans-serif;
+  font-size: 24px;
+  color: #455eea;
+}
+.btn-outline-primary_mod {
+  color: #455eea;
+  border-color: #455eea;
+}
+.btn-outline-primary_mod.btn-fill {
+  background: #455eea;
+  color: #fff;
+}
 #map {
-  height: 500px;
+  height: calc(100vh - 62px);
 }
 
 .puff-in-center {
